# harness-slack-jipsa

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: lint.yml  test.yml
docs/superpowers/plans/: 2026-05-20-agent-bootstrap-cleanup.md
docs/superpowers/specs/: 2026-05-20-agent-bootstrap-cleanup-design.md
modules/: 01-slack-bridge.md  02-folder-trigger.md  03-bridge-trigger.md  04-notion-archive.md  migration-env-singularization.md  security-token-rotation.md
research/: competitive-analysis.md
templates/: launchd-daemon.plist.tmpl  launchd-folder-watch.plist.tmpl  systemd-folder-watch.path.tmpl  systemd-folder-watch.service.tmpl  systemd-slack-jipsa.service.tmpl
templates/hooks/: append_turn_raw.py  slack-session-summary.sh
templates/lib/: md_to_notion.py  notion.py  slack_mrkdwn.py
templates/windows/: cleanup-old-logs.ps1  cleanup-processed.ps1  folder-watch.ps1.tmpl  register-folder-task.ps1  register-slack-task.ps1  run-daemon.ps1  slack-session-summary.ps1
tests/: conftest.py
tests/integration/: test_handle_message.py
tests/unit/: test_audit_logger.py  test_claude_invoker.py  test_daemon.py  test_daemon_system_prompt.py  test_filters.py  test_jipsa_daemon.py  test_logging_config.py  test_md_to_notion.py  test_notion.py  test_notion_logger.py  test_notion_upsert.py  test_security_monitor.py  test_session_storage.py  test_shared_buffer.py  test_slack_io.py
(+11 files in other folders)
